--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 #root {
   background-color:rgb(0,0,18);
+}
 {
 #root #header {
     background-image: url('https://github.com/Fortressdesign4/fortressdesign/raw/main/bg.png');
