--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
 #root {
   background-color:rgb(0,0,18);
 }
+#root .top h1{
+  color:hsl(0,0,100%);
+}
 {
 #root #header {
     background-image: url('https://github.com/Fortressdesign4/fortressdesign/raw/main/bg.png');
