--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@
   display: flex;
   justify-content:space-between,
     }
-#root #header {
-    background-image: url('https://github.com/Fortressdesign4/fortressdesign/raw/main/bg.png');
-    background-size: cover; /* Adjust as needed */
-    background-position: center; /* Adjust as needed */
-}
+#root .page{
+  max-width: 89%;
+  margin:50px auto;
