--- a/style.css
+++ b/style.css
@@ -65,11 +65,12 @@ body, html, #root {
 
 /* Seiteninhalt */
 #root .pages {
-  max-width: 90%;
+  max-width: calc(100% - 20%);
   margin: 25px auto;
   padding: 1em 2em;
   background-color: #111;
-  border-radius: 8px;
+  border-radius: 8px blue;
+  box-shadow: 2px 2px 18px lightblue;
   flex-grow: 1;
 }
 
